--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,5 @@
 steps:
-  - label: "<img class="emoji" title="pipeline" alt=":pipeline:" src="http://buildkiteassets.com/emojis/img-buildkite-64/pipeline.png" draggable="false" /> Pipeline upload"
-  - command: buildkite-agent pipeline upload
-  - label: ":build: List files"
+  - label: ":git: List files"
     command: "ls -la"
     agents:
     - "queue=aws"
@@ -12,4 +10,3 @@ steps:
     command: "mkdir pkg"
     agents:
     - "queue=aws"
-    
